# xfly-server

./: CMakeLists.txt  xfly.conf
_include/: xfly_comm.h  xfly_conf.h  xfly_func.h  xfly_global.h  xfly_memory.h  xfly_socket.h
app/: CMakeLists.txt  xfly.cpp  xfly_conf.cpp  xfly_func.cpp
log/: CMakeLists.txt
misc/: CMakeLists.txt  xfly_memory.cpp
net/: CMakeLists.txt  xfly_socket.cpp  xfly_socket_accept.cpp  xfly_socket_conn.cpp  xfly_socket_inet.cpp  xfly_socket_request.cpp
proc/: CMakeLists.txt  xfly_daemon.cpp  xfly_event.cpp  xfly_process.cpp
signal/: CMakeLists.txt  xfly_signal.cpp
test/: CMakeLists.txt  run.cpp  test_xfly_func.cpp
